--- a/.gitignore
+++ b/.gitignore
@@ -14,6 +14,7 @@ app/design/frontend/default/iphone/
 app/design/frontend/default/modern/
 app/design/frontend/enterprise/default
 app/design/frontend/enterprise/iphone
+app/design/frontend/amp/default/template/page/html/styles.phtml
 app/design/install/
 app/etc/modules/Enterprise_*
 app/etc/modules/Mage_All.xml
@@ -137,3 +138,4 @@ media/
 shell/
 lib/
 privatesales/
+app/design/frontend/amp/default/template/page/html/styles.phtml
