--- a/.gitignore
+++ b/.gitignore
@@ -139,3 +139,5 @@ shell/
 lib/
 privatesales/
 app/design/frontend/amp/default/template/page/html/styles.phtml
+
+app/design/frontend/amp/default/template/page/html/styles.phtml
